# sio

./: meson.build
Headers/SIO/: SIO.h  SIODataStream.h  SIOFileStream.h  SIOStream.h
Source/: SIODataStream.m  SIOFileStream.m  SIOStream.m  meson.build
Tests/: encoding.m  hello-world.m  meson.build
